--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,6 +1,19 @@
-$body-bg:          #ecf0f1;
-$navbar-default-bg:  #4C2052;
-$navbar-default-link-color: #ecf0f1;
-$jumbotron-bg: #f39c12;
+@import 'https://fonts.googleapis.com/css?family=Lato:400,700';
+
+$body-bg:          			 			 #ecf0f1;
+$font-family-sans-serif:	    'Lato','Helvetica Neue', Helvetica, Arial, sans-serif;
+$navbar-height: 				  		45px;
+$navbar-default-bg:           white;
+$navbar-default-link-color:   #f1c40f;
+$jumbotron-bg:                white;
+
 
 @import 'bootstrap';
+
+.center {
+	text-align: center;
+}
+
+.navbar-brand{
+	font-weight: bold;
+}
