--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,8 @@
-
-<h1>Welcome to my app</h1>
-<p>
-Sign up  <%= link_to "here", "#" %>
-</p>
+<div class="jumbotron center" >
+	<h1>Welcome to my app</h1>
+	<h3>Click here to</h3>
+	<p> 
+		<%= link_to "Sign up", "#", class:"btn btn-primary btn-lg"%>
+		<%= link_to " Log in", "#", class:"btn btn-info btn-lg"%>
+	</p>
+</div>
